--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 body {
     text-decoration: none;
     margin: 0;
-    padding: 0;
+    padding-top: 60px;
+    padding-bottom: 60px;
     list-style: none;
     background-color: rgba(193, 209, 208, 0.766);
 
@@ -33,8 +34,11 @@ header {
 header h1 {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
+    letter-spacing: -0.08em;
 }
-
+header h1 span {
+    letter-spacing: -0.2em;
+}
 header .navbar {
     position: absolute;
     display: flex;
@@ -82,4 +86,184 @@ header .navbar .div-deux button {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: 12px;
     margin-right: 25px;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    height:600px;
+    position: relative;
+}
+.container img {
+    /* width: max-content; */
+    width:100%;
+    position:relative;
+}
+.container .div1 {
+    width: 65%;
+    position: relative;
+    background-image: url(images_p1/portrait-jeune-adulte-portant-maquette-capuche.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 20px;
+}
+.container .div2 {
+    width: 35%;
+    position: relative;
+    display: block;
+}
+.container .div2 .part1 {
+    height: 50%;
+    position: relative;
+    background-image: url(images_p1/224f2a1b41563535c2ffcaab1acf428f_e4633e3e-0b7b-4bda-bb5a-cd614b8a04f5_1800x1800.jpg);
+    background-repeat: no-repeat;
+    background-position:bottom;
+    background-size:contain;
+    padding: 20px;
+    border: #33333323 solid;
+    margin-left: 10px;
+}
+.container .div2 .part2 {
+    height: 40%;
+    display: flex;
+    flex-direction: row;
+    border: 2px solid #33333325;
+    margin: 10px;
+}
+.container .div2 .part2 .content1 {
+    width: 50%;
+    height:auto;
+    position: relative;
+    /* border: 2px solid #33333325; */
+    margin: 10px;
+    padding: 10px;
+    background-image: url(images_p1/craghoppers-mens-anderson-waterproof-cagoule-p49528-266366_medium.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+.container .div2 .part2 .content2 {
+    width: 50%;
+    position: relative;
+    border-left: 2px solid #33333325;
+    margin: 10px;
+    padding: 10px;
+    background-image: url(images_p1/mastermind-homme-x-streetwear-messenger-bag-black-1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+.container .div1 h3 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0;
+    position: absolute;
+    bottom: 240px
+}
+.container .div1 h2 {
+    /* position: absolute; */
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    font-size: 50px;
+    margin: 0;
+    position: absolute;
+    bottom: 190px
+}
+.container .div1 p {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 60%;
+    position: absolute;
+    bottom: 90px
+}
+.container .div1 span {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    border-bottom: 2px solid #333;
+    border-spacing: 2px;
+    position: absolute;
+    bottom: 70px;
+}
+.container .div2 .part1 h4 {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    position: relative;
+}
+.container .div2 .part1 p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12px;
+    position: relative;
+    color: rgb(86, 1, 1);
+}
+.container .div2 .part2 h4 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    position: absolute;
+    top: -11px;
+    line-height: 2px;
+}
+.container .div2 .part2 p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 10px;
+    color: rgb(86, 1, 1);
+}
+
+.title-Bar {
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    padding: 40px;
+}
+.title-Bar h1 {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 30px;
+    text-align: center;
+    line-height: 1px;
+}
+.title-Bar p {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 12px;
+    text-align: center;
+}
+
+.new-arrivals {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.new-arrivals .content {
+    width: 20%;
+    position: relative;
+    margin-right: 15px;
+}
+.new-arrivals .content img {
+    /* width: 100%; */
+    max-height: 100%; 
+    max-width: 100%;
+    position: relative;
+}
+.new-arrivals .content .btn1 {
+    background-color: green;
+    color: white;
+    border: none;
+    padding: 5px;
+    font-style: oblique;
+    position: absolute;
+    left: 10px;
+    top:10px;
+}
+.new-arrivals .content .btn2 {
+    background-color: rgb(216, 141, 3);
+    color: white;
+    border: none;
+    padding: 5px;
+    position: absolute;
+    left: 10px;
+    top:40px;
+}  
+.new-arrivals .content p {
+    font-family:sans-serif;
+    color: #454545;
+} 
+.new-arrivals .content span {
+    font-weight: bold;
 }
