--- a/src/style.css
+++ b/src/style.css
@@ -233,13 +233,14 @@ header .navbar .div-deux button {
 .new-arrivals .content {
     width: 20%;
     position: relative;
-    margin-right: 15px;
+    margin: 15px;
+    background-color: #62626208;
 }
 .new-arrivals .content img {
-    /* width: 100%; */
-    max-height: 100%; 
-    max-width: 100%;
-    position: relative;
+    width: 200px;
+    height: 150px;
+    object-fit: contain;
+    /* position: relative; */
 }
 .new-arrivals .content .btn1 {
     background-color: green;
@@ -266,4 +267,17 @@ header .navbar .div-deux button {
 } 
 .new-arrivals .content span {
     font-weight: bold;
+}
+.footClass {
+    width: 100%;
+    height: 300px;
+    background-color: azure;
+    margin-top: 80px;
+    position: relative
+}
+.footClass img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    position: relative;
 }
